@@ -11,6 +11,7 @@ systemd (215-6ubuntu1) UNRELEASED; urgency=medium
       never supported them in Ubuntu.
     - Keep our much simpler udev maintainer scripts (all platforms must
       support udev, no debconf).
+    - Add udev Apport package hook.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 12 Oct 2014 17:29:00 +0200
 
